[gd_scene load_steps=4 format=3 uid="uid://cg8sovak1nglu"]

[ext_resource type="Texture2D" uid="uid://dpq1urs7kv40h" path="res://point_light_circle.svg" id="1_3hk4c"]
[ext_resource type="Script" uid="uid://c0a1d6mfwsp8g" path="res://Entities/Components/DetectionAreaComponent.gd" id="2_lavaj"]
[ext_resource type="Script" uid="uid://bo744wpycscqd" path="res://addons/vision_cone_2d/vision_cone_2d.gd" id="3_lavaj"]

[node name="DetectionAreaComponent" type="PointLight2D"]
blend_mode = 2
shadow_enabled = true
shadow_item_cull_mask = 7
texture = ExtResource("1_3hk4c")
script = ExtResource("2_lavaj")

[node name="VisionCone2D" type="Node2D" parent="." node_paths=PackedStringArray("write_collision_polygon")]
script = ExtResource("3_lavaj")
max_distance = 128.0
collision_layer_mask = 1
write_collision_polygon = NodePath("VisionConeArea/VisionConeCollider")
minimum_recalculate_time_msec = 500

[node name="VisionConeArea" type="Area2D" parent="VisionCone2D"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="VisionConeCollider" type="CollisionPolygon2D" parent="VisionCone2D/VisionConeArea"]
polygon = PackedVector2Array(-1.1190115e-05, -128, 8.037179, -127.74742, 16.04265, -126.990685, 23.984806, -125.732765, 31.832308, -123.978645, 39.55418, -121.73523, 47.11995, -119.01139, 54.49976, -115.817856, 61.664482, -112.16725, 68.585815, -108.07398, 75.2365, -103.554184, 81.59026, -98.6257, 87.622025, -93.30798, 93.30798, -87.62203, 98.625694, -81.59027, 103.55418, -75.2365, 108.07398, -68.58582, 112.16726, -61.66446, 115.817856, -54.49976, 119.01139, -47.119938, 121.73523, -39.55418, 123.978645, -31.83231, 125.732765, -23.984808, 126.990685, -16.04265, 127.74742, -8.03718, 128, -5.5950577e-06, 127.74742, 8.037184, 126.990685, 16.042654, 125.732765, 23.984812, 123.978645, 31.832314, 121.73524, 39.554173, 119.01139, 47.11994, 115.81786, 54.499752, 112.16725, 61.664474, 108.073975, 68.58582, 103.55418, 75.23651, 98.625694, 81.59027, 93.30798, 87.62203, 87.62203, 93.30798, 81.59027, 98.625694, 75.23651, 103.55418, 68.58583, 108.073975, 61.664474, 112.16725, 54.49975, 115.81786, 47.11994, 119.01139, 39.554176, 121.73524, 31.832308, 123.978645, 23.984808, 125.732765, 16.042654, 126.990685, 8.037187, 127.74742, -5.684342e-14, 128, -8.037187, 127.74742, -16.042654, 126.990685, -23.984808, 125.732765, -31.832308, 123.978645, -39.554176, 121.73524, -47.11994, 119.01139, -54.49975, 115.81786, -61.664474, 112.16725, -68.58583, 108.073975, -75.23651, 103.55418, -81.59027, 98.625694, -87.62203, 93.30798, -93.30798, 87.62203, -98.625694, 81.59027, -103.55418, 75.23651, -108.073975, 68.58582, -112.16725, 61.664474, -115.81786, 54.499752, -119.01139, 47.11994, -121.73524, 39.554173, -123.978645, 31.832314, -125.732765, 23.984812, -126.990685, 16.042654, -127.74742, 8.037184, -128, -5.5950577e-06, -127.74742, -8.03718, -126.990685, -16.04265, -125.732765, -23.984808, -123.978645, -31.83231, -121.73523, -39.55418, -119.01139, -47.119938, -115.817856, -54.49976, -112.16726, -61.66446, -108.07398, -68.58582, -103.55418, -75.2365, -98.625694, -81.59027, -93.30798, -87.62203, -87.622025, -93.30798, -81.59026, -98.6257, -75.2365, -103.554184, -68.585815, -108.07398, -61.664482, -112.16725, -54.49976, -115.817856, -47.11995, -119.01139, -39.55418, -121.73523, -31.832308, -123.978645, -23.984806, -125.732765, -16.04265, -126.990685, -8.037179, -127.74742, 1.1190115e-05, -128)
